--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div>
-      <h1>Welcome to Head in the Clouds application</h1>
+      <h1>Welcomeeee to Head in the Clouds application</h1>
     {{{body}}}
 </div>
 <div class="containted-fluid">
