Added name to html

--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -11,6 +11,7 @@
 <body>
   <div>
       <h1>Welcome to Head in the Clouds application</h1>
+      <h2>Jack Greene</h2>
     {{{body}}}
 </div>
 <div class="containted-fluid">
