--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -11,6 +11,7 @@
 <body>
   <div>
       <h1>Welcomeeee to Head in the Clouds application</h1>
+      <p>Naveena</p>
     {{{body}}}
 </div>
 <div class="containted-fluid">
