--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -12,6 +12,7 @@
   <div>
       <h1>Welcomeeee to Head in the Clouds application</h1>
       <h2>Jack Greene</h2>
+      <p>Jack Shutler thinks Cats > Dogs</p>
     {{{body}}}
 </div>
 <div class="containted-fluid">
