Alaa's committing for a 13th time

--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -11,6 +11,7 @@
 <body>
   <div>
       <h1>Alaa</h1>
+      <h2>Welcome to our cloud app</h2>
     {{{body}}}
 </div>
 <div class="containted-fluid">
