--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,8 +1,10 @@
-<ul >
-  {{#events}}
+<div class="container-flex" style= "text-align:center">
+    <ul style="list-style-type:none;">
+    {{#events}}
     <li>
         <h2>{{ title }}</h2>
         <p>{{ description }}</p>
     </li>
-  {{/events}}
-</ul>
+    {{/events}}
+    </ul>
+</div>
