--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -8,23 +8,19 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 </head>
-<body>
-  <div>
+<body class="bg-dark text-light">
+  <div class="container" style="text-align:center">
       <h1>Welcomeeee to Head in the Clouds application</h1>
-      <h2>Jack Greene</h2>
-      <p>Jack Shutler thinks Cats > Dogs</p>
-      <p>Naveena Chilukuri</p>
-      <h1>Alaa</h1>
-      <h2>Welcome to our cloud app</h2>
+     <h2>Alaa, Erica, Jack, Jack and Naveena</h2> 
     {{{body}}}
 </div>
-<div class="containted-fluid">
+<div class="container-fluid" style="text-align:center">
   <h2>Add an event</h2>
     <form action="/event" method="post">
        title: <input name="title" type="text" /> <br />
        description: <input name="description" type="text" /> <br />
        <br />
-        <input type="submit" name="submit" value="submit" />
+        <input type="submit" name="submit" value="submit" class="btn btn-primary" />
     </form>
   </div>
 </body>
