--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 </head>
-<body class="bg-dark text-light">
+<body class="bg-success text-light">
   <div class="container" style="text-align:center">
       <h1>Welcomeeee to Head in the Clouds application</h1>
      <h2>Alaa, Erica, Jack, Jack and Naveena</h2> 
